<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EndActivity"
    android:background="@drawable/hatter">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/lastTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youlose"
            android:layout_marginTop="100sp"
            android:layout_marginBottom="50sp"
            android:textSize="60sp"
            android:textStyle="bold"
            android:fontFamily="@font/jb"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="50sp">

            <TextView
                android:id="@+id/correctWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10sp"
                android:fontFamily="@font/jb"
                android:text="@string/goodAnswer"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/endwordTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:fontFamily="@font/jb"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/restartButton"
            android:layout_width="150sp"
            android:layout_height="40sp"
            android:layout_margin="30sp"
            android:background="@drawable/mybutton"
            android:text="@string/restart"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/jb"
            android:textColor="#ffffff"
            android:onClick="restartGame"/>

        <Button
            android:id="@+id/EndGameBackToMain"
            android:layout_width="150sp"
            android:layout_height="40sp"
            android:background="@drawable/mybutton"
            android:text="@string/backToMain"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/jb"
            android:textColor="#ffffff"
            android:onClick="backToMain"/>
    </LinearLayout>
</RelativeLayout>